src/components/socialLinks.module.css
.container {
  margin-left: 0;
}

.container li {
  display: inline-block;
  margin-right: 2.5rem;
}

.container li a {
  font-size: 1.2rem;
  border: none;
}

.container li a svg {
  width: 1.2rem;
  height: 1.2rem;
}

.container .link-text {
  display: inline-block;
  margin-left: 0.5rem;
}

@media only screen and (max-width: 600px) {
  .container li a {
    font-size: 1.75rem;
  }

  .container .link-text {
    display: none;
  }
}

